@@ -28,5 +28,6 @@ vista-foia (0.20140106-1) UNRELEASED; urgency=low
     included in the FOIA release of April 5th 2013.
   * In rules, better chain targets for import and then compilation.
   * In control, set Vcs-Browser and Vcs-Git to point to git repo in Alioth.
+  * In rules, reorganized build vs config. Leaving compilation only in build.
 
  -- Luis Ibanez <luis.ibanez@kitware.com>  Wed, 4 Jul 2012 17:16:45 -0500
